--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disajcreations</title>
-</head>
-<body>
-    Comingsoon...
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- <script src="app.js"></script> -->
+    <link rel="stylesheet" href="only-css.css" />
+    <title>
+      Disajcreations | Discover the art of style with our fashion-forward
+      creations!
+    </title>
+  </head>
+  <body>
+    <main>
+      <picture class="flex picture">
+        <source media="(min-width:85em)" srcset="img/hero-desktop.jpg" />
+        <source media="(min-width:20em)" srcset="img/hero-mobile.jpg" />
+        <img
+          src="img/hero-mobile.jpg"
+          alt="A woman in a salmon shirt holding her hand near her face."
+        />
+      </picture>
+
+      <section class="grid container hero text-center w-100">
+        <div class="w-100">
+          <div style="text-align: left;">
+            <img id="logo" src="img/logo.jpg" alt="Disajcreations" />
+          </div>
+          <h1 class="fw-300 uppercase hero__title">
+            We're <span class="fw-600 accent">Coming Soon</span>
+          </h1>
+          <p>
+            Hello fellow shoppers! We're currently building our new fashion
+            store.
+          </p>
+          <div>
+            <p style="color: #333">
+              Follow on
+              <a
+                href="https://www.instagram.com/disajcreations"
+                target="_blank"
+                style="vertical-align: -7px; display: inline-block"
+              >
+                <img
+                  style="width: 24px; display: inline-block"
+                  src="img/insta_icon.png"
+                />
+              </a>
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
