update image and logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section class="grid container hero text-center w-100">
         <div class="w-100">
           <div style="text-align: left;">
-            <img id="logo" src="img/logo.jpg" alt="Disajcreations" />
+            <img id="logo" style="max-width: 200px; margin-left: 0;" src="img/disaj_creations.png" alt="Disajcreations" />
           </div>
           <h1 class="fw-300 uppercase hero__title">
             We're <span class="fw-600 accent">Coming Soon</span>
@@ -35,20 +35,32 @@
             Hello fellow shoppers! We're currently building our new fashion
             store.
           </p>
-          <div>
-            <p style="color: #333">
+          <div style="margin-top: 1rem;">
+            <p style="color: #550040">
               Follow on
+            </p>
+            <div style="margin-top: 0.3rem;">
               <a
                 href="https://www.instagram.com/disajcreations"
                 target="_blank"
-                style="vertical-align: -7px; display: inline-block"
+                style="vertical-align: -7px; display: inline-block; margin-right: 1rem;"
               >
                 <img
                   style="width: 24px; display: inline-block"
                   src="img/insta_icon.png"
                 />
               </a>
-            </p>
+              <!-- <a
+                href="https://www.instagram.com/disajcreations"
+                target="_blank"
+                style="vertical-align: -7px; display: inline-block; margin-right: 1rem;"
+              >
+                <img
+                  style="width: 24px; display: inline-block"
+                  src="img/insta_icon.png"
+                />
+              </a> -->
+            </div>
           </div>
         </div>
       </section>
