--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <!-- <script src="app.js"></script> -->
     <link rel="stylesheet" href="only-css.css" />
     <title>
       Disajcreations | Discover the art of style with our fashion-forward
@@ -17,7 +15,7 @@
       <picture class="flex picture">
         <source media="(min-width:85em)" srcset="img/hero-desktop.jpg" />
         <source media="(min-width:20em)" srcset="img/hero-mobile.jpg" />
-        <img
+        <img style="height: 100vh; object-fit: cover;"
           src="img/hero-mobile.jpg"
           alt="A woman in a salmon shirt holding her hand near her face."
         />
