--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
     <link rel="stylesheet" href="only-css.css" />
     <title>
       Disajcreations | Discover the art of style with our fashion-forward
